--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="images/title.jpg" alt="Logo">
+                <img src="images/Title.jpg" alt="Logo">
             </div>
             <nav>
                 <ul>
