--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="images/title.jpg" alt="教堂標誌">
+                <img src="images/Title.jpg" alt="教堂標誌">
             </div>
             <nav>
                 <ul>
@@ -63,36 +63,34 @@
                 </div>
             </div>
 
-            <div class="about-section">
                 <h2>聯絡資訊</h2>
                 <div class="content-block contact-info">
                     <div class="contact-grid">
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <h3>地址</h3>
-                            <p>70175 台南市東區裕農三街1 號</p>
+                            <p>70175</p>
+                            <p>台南市東區裕農三街1 號</p>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <h3>電話</h3>
-                            <p>TEL: 331-0412</p>
+                            <p>TEL: (06) 331-0412</p>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <h3>電子郵件</h3>
-                            <p>aquino12@gmail.com</p>
+                            <p>muyou20241105@gmail.com</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </main>
 
     <footer>
         <div class="footer-content">
             <div class="footer-info">
-                <p>願天主降福您 瑪麗亞進教之佑</p>
-                <p>© 2024 瑪麗亞進教之佑天主堂 版權所有</p>
+                <p>&copy; 2024 聖母進教之佑天主堂. All rights reserved.</p>
             </div>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
