--- a/gallery-sunday-school.html
+++ b/gallery-sunday-school.html
@@ -130,32 +130,116 @@
                     <p>孩子們專注地參與主日學課程</p>
                 </div>
             </div>
+            
             <div class="gallery-item">
-                <img src="images/Sunday_School/2.jpg" alt="聖經故事時間">
+                <img src="images/Sunday_School/2.jpg" alt="主日學課程">
                 <div class="gallery-overlay">
-                    <h3>聖經故事時間</h3>
-                    <p>老師生動地講述聖經故事</p>
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
                 </div>
             </div>
+
             <div class="gallery-item">
-                <img src="images/Sunday_School/3.jpg" alt="手工藝活動">
+                <img src="images/Sunday_School/3.jpg" alt="主日學課程">
                 <div class="gallery-overlay">
-                    <h3>手工藝活動</h3>
-                    <p>孩子們製作與信仰相關的手工藝品</p>
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
                 </div>
             </div>
+
             <div class="gallery-item">
-                <img src="images/Sunday_School/4.jpg" alt="團體活動">
+                <img src="images/Sunday_School/4.jpg" alt="主日學課程">
                 <div class="gallery-overlay">
-                    <h3>團體活動</h3>
-                    <p>主日學的團體互動遊戲時間</p>
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
                 </div>
             </div>
+
             <div class="gallery-item">
-                <img src="images/Sunday_School/5.jpg" alt="節慶慶祝">
+                <img src="images/Sunday_School/5.jpg" alt="主日學課程">
                 <div class="gallery-overlay">
-                    <h3>節慶慶祝</h3>
-                    <p>特殊節日的歡樂慶祝活動</p>
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/6.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/7.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/8.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/9.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/10.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/11.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/12.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+            
+            <div class="gallery-item">
+                <img src="images/Sunday_School/13.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/14.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
+                </div>
+            </div>
+
+            <div class="gallery-item">
+                <img src="images/Sunday_School/15.jpg" alt="主日學課程">
+                <div class="gallery-overlay">
+                    <h3>主日學課程</h3>
+                    <p>孩子們專注地參與主日學課程</p>
                 </div>
             </div>
         </div>
@@ -163,7 +247,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 XXX教堂. All rights reserved.</p>
+            <p>&copy; 2024 聖母進教之佑教堂. All rights reserved.</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
