--- a/gallery-template.html
+++ b/gallery-template.html
@@ -100,7 +100,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="images/title.jpg" alt="教堂標誌">
+                <img src="images/Title.jpg" alt="教堂標誌">
             </div>
             <nav>
                 <ul>
