--- a/index.html
+++ b/index.html
@@ -92,6 +92,52 @@
             font-size: 2rem;
             margin: 3rem 0;
         }
+
+        .pdf-documents {
+            padding: 4rem 2rem;
+            background: var(--light-bg);
+        }
+
+        .pdf-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 2rem auto;
+        }
+
+        .pdf-item {
+            background: white;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            text-decoration: none;
+            color: var(--text-color);
+            transition: transform 0.3s ease;
+        }
+
+        .pdf-item:hover {
+            transform: translateY(-5px);
+        }
+
+        .pdf-item i {
+            font-size: 3rem;
+            color: #ff0000;
+            margin-bottom: 1rem;
+        }
+
+        .pdf-item h3 {
+            color: var(--primary-color);
+            margin-bottom: 0.5rem;
+            font-size: 1.2rem;
+        }
+
+        .pdf-item p {
+            font-size: 0.9rem;
+            color: var(--text-color);
+            margin: 0;
+        }
     </style>
 </head>
 <body>
@@ -129,7 +175,88 @@
                     <h2 class="main-title">神父的話</h2>
                     <div class="content-block inner-block">
                         <div class="intro-text">
-                            <p>鮑思高慈幼會是天主教會內的一個修會團體，由聖若望鮑思高神父於1859年創立。本會以教育及牧養青年為主要使命，特別關注處境困難的青年。</p>
+                            <p>　　教宗方濟各於4月21日安息主懷後,
+                                殯葬彌撒於 26 日週六在聖伯多祿廣場舉
+                                行,由樞機團團長雷(Giovanni Battista
+                                Re)樞機主禮。雷樞機在講道中向參禮者
+                                表示感謝,帶領眾人重溫了教宗方濟各的
+                                牧職及訓導,邀請大家為教宗祈求永遠的
+                                福樂,並呼求貝爾格里奧教宗從天上為眾
+                                人轉求,降福在塵世旅途中的子民。本期
+                                堂刊"神父的話"就借用這位樞機主教的
+                                講道來緬懷我們的教宗 12 年來帶領普世
+                                教會,與我們同道偕行所留下的步履足
+                                跡。
+                                以下是雷樞機在教宗方濟各葬禮上的講道
+                                全文:
+                                在這雄偉壯觀的聖伯多祿廣場上,教
+                                宗方濟各曾多次在此舉行感恩聖事,並在這 12 年間主持了許多重大的會晤。我們懷著悲痛的心情,聚集在他的遺體旁祈禱,但信德的理念支
+                                持著我們,向我們保證,人的存在不會在墳墓內結束,而是在天父的家中過一種沒有日落的幸福生活。
+                                在教宗方濟各從塵世過渡到永生後,我們眾人都看到了萬眾一心表達的愛戴與參與,這讓我們知
+                                道他日理萬機的教宗牧職是多麼觸動人的心智。
+                                在我們眼目和心中留下教宗方濟各最後的圖像,正是上個主日,主復活的隆重慶典,他儘管健康
+                                極度不佳,仍願意從聖伯多祿大殿的陽台上降福我們,然後願意來到這個廣場上,乘坐敞篷座車問候
+                                所有聚集在這裡參加復活節彌撒的大量人群。
+                                現在我們藉著祈禱,將敬愛的教宗的靈魂託付於天主,願祂賜予他永遠的幸福,進入祂無限慈愛
+                                的光明與光榮中。
+                                《福音》的章節光照並引領我們,基督詢問宗徒之長伯多祿的話語再次迴盪:"伯多祿,你比他
+                                們更愛我嗎?"伯多祿即刻且真誠地回答:"主,祢知道一切;祢知道我愛祢!"耶穌就將重大的使
+                                命交給他:"你牧放我的羊群。"這將是伯多祿及他的繼承人持續不變的使命,一項愛的服務,跟隨
+                                老師及吾主基督。
+                                儘管教宗方濟各極為脆弱和受苦,但他選擇了走這條奉獻的道路,直到他塵世生命的最後一天。
+                                他跟隨他的上主、善牧的足跡,善牧愛祂的羊群,直到為他們捨棄自己的性命。教宗也以強有力且祥
+                                和的態度,親近他的羊群,天主的教會。
+                                當貝爾格里奧樞機於 2013 年 3 月 13 日在選舉教宗會議上當選,繼承教宗本篤十六世的牧職時,
+                                他已在耶穌會有多年的修會生活,尤其有布宜諾斯艾利斯總主教區 21 年牧職的豐富經驗,先是輔理
+                                主教,然後是助理主教,隨後擔任總主教。
+                                取名方濟各的決定立即顯示出,他願意將之作為一項綱領的選擇和用以履行他教宗牧職的風格,
+                                努力遵行亞西西的聖方濟各精神。
+                                教宗方濟各一直保留了他的性格和牧靈指導的形式,並立即在教會的治理上留下了他強烈個性的
+                                印記,與個人和人群建立直接的接觸,渴望接近眾人,尤其關注處於困境的人,尤其為世界上的卑微
+                                者、被邊緣化的人不惜花費自己的時間。他是一位深入人群的教宗,向所有人敞開心扉。他也關心社
+                                會新事物,以及聖神在教會內激發的一切。
+                                他以其獨特的詞彙和富於圖像和隱喻的言語,總是設法以福音的智慧啟發當代的問題,在信仰的
+                                光照下提供答案,並鼓勵人們以基督徒的身份來面對這些年的變化帶來的挑戰與矛盾,他喜歡稱這些變化為"時代的改變"。
+                                他很直白,並且以一種非正式的方式對每個人說話,甚至是遠離教會的人。
+                                教宗方濟各充滿人性溫暖,對當今的悲劇極有敏覺,實際分享了當今時代的焦慮、痛苦和希望,
+                                並能以安慰和鼓勵的訊息,直接且即時地抵達人心。
+                                他接納和聆聽的特恩,加上現今具有敏覺的行為方式,觸動人心,努力喚醒道德與靈性的能量。
+                                福傳的首要性一直是他教宗牧職的指導方針,以明確的傳教印記,傳播福音的喜樂,這也是他第
+                                一道宗座勸諭《福音的喜樂》的標題。這喜樂在所有依靠天主的人的心中充滿信賴和希望。
+                                他使命的導線也是深信教會是所有人的家;是一個大門永遠敞開的家。他曾多次把教會的形象比
+                                作"戰地醫院",在一場戰爭後,那裡有許多傷員;這個教會感到需要果斷地關心世人的問題,以及
+                                使當代世界受蹂躪的巨大痛苦;這個教會能夠超越任何信仰或處境,向每個人彎下腰,醫治他的創傷。
+                                他為幫助難民和流離失所者作出的舉動和勸言不勝枚舉。他在幫助窮人的行動中也堅持不懈。
+                                極具意義的是,教宗方濟各的首次出訪,前往蘭佩杜薩島(Lampedusa)意義深遠,這個島嶼
+                                是移民悲劇(緊急情況)的象徵,數以千計的人淹死在海中。本著同樣的思想,他與大公宗主教和雅
+                                典總主教一同前往萊斯沃斯島(Lesbos);他在墨西哥訪問時,在墨西哥與美國邊界舉行彌撒聖祭,
+                                也是如此。
+                                在他 47 次艱辛的使徒之旅中,2021 年不顧當時的一切危險前往伊拉克的那一次,將以特殊的
+                                方式留名青史。那次艱辛的使徒訪問是在伊拉克人民裂開的傷口上塗上香膏,他們因伊斯蘭國(ISIS)
+                                的非人道行為而深受痛苦。這也是促進跨宗教對話的重要旅程,另一個重要維度,就是他的牧靈工作。
+                                教宗在 2024 年對亞洲和大洋洲四國進行了使徒訪問,到達"世界最邊緣的邊緣地區"。
+                                教宗方濟各總是將慈悲的福音置於中心位置,一再強調天主不厭其煩地寬恕:無論祈求寬恕者處
+                                於何種境況,祂總是寬恕,使他重歸正道。
+                                因此,他願意開啟慈悲特殊禧年,指出慈悲是"福音的核心"。
+                                "慈悲"與"福音的喜樂"是教宗方濟各的兩個關鍵詞。
+                                與他所稱的"丟棄文化"相反,他論述了相遇文化、團結互助的文化。兄弟情誼的主題以振奮人
+                                心的語調貫穿了他整個的教宗任期。他在《眾位弟兄》通諭中,希望恢復世界上對手足之情的渴望,
+                                因為眾人都是同一位天父的子女。他時常極力提醒,我們大家都屬於同一個人類大家庭,沒有人能獨自獲救。
+                                2019 年,在出訪阿拉伯聯合酋長國期間,教宗方濟各簽署了一份關於兄弟情誼的文件,《促進世
+                                界和平與共處》,重申共有的天主慈父。
+                                他以《願祢受讚頌》通諭向世界的男人和女人說話,喚起人們關注窮人,對共同家園具有的責任。
+                                面對這些年來許多戰爭的猖獗、非人性的恐怖和無數的死亡及摧毀,教宗方濟各不斷高聲呼求和
+                                平,籲請明知、誠實的談判,以尋求可行的解決之道。他說因為戰爭只導致人命死亡,摧毀房屋,摧
+                                毀醫院和學校。他的一種說法是,戰爭總是讓世界比以前更糟糕:對每個人而言,戰爭總是痛苦和慘
+                                敗。
+                                "建造橋樑而非高牆"是他多次重複的勸勉,作為伯多祿宗徒的繼承人,為信仰服務總是與服事
+                                人的各層面相結合。
+                                在精神上與全體基督信徒的相聯中,我們眾多人在此為教宗方濟各祈禱,求天主將他接入祂無限
+                                的愛內。
+                                教宗方濟各常在演講和私人會晤結束時說:"請不要忘記為我祈禱。"
+                                現在,親愛的教宗方濟各,我們懇求你為我們祈禱,我們懇求你在天上降福教會、降福羅馬、降
+                                福全世界,正如你上個主日在這座大殿的陽台上所行的那樣,最後一次擁抱全體天主子民,也在精神
+                                上擁抱全人類,擁抱真心尋求真理、高舉希望火炬的人類。</p>
                             <p>欲了解更多資訊，歡迎瀏覽<a href="https://www.catholic.org.tw" class="special-link">中華會省慈幼會官方網站</a>。</p>
                         </div>
                     </div>
@@ -233,6 +360,31 @@
             </div>
         </section>
 
+        <section class="pdf-documents">
+            <div class="section-container">
+                <div class="content-block outer-block">
+                    <h2 class="section-title">文件下載</h2>
+                    <div class="pdf-grid">
+                        <a href="documents/25.05.pdf" class="pdf-item" target="_blank">
+                            <i class="fas fa-file-pdf"></i>
+                            <h3>堂區週報</h3>
+                            <p>最新堂區活動與消息</p>
+                        </a>
+                        <a href="documents/example2.pdf" class="pdf-item" target="_blank">
+                            <i class="fas fa-file-pdf"></i>
+                            <h3>慕道班資訊</h3>
+                            <p>慕道班課程與報名資訊</p>
+                        </a>
+                        <a href="documents/example3.pdf" class="pdf-item" target="_blank">
+                            <i class="fas fa-file-pdf"></i>
+                            <h3>堂區規章</h3>
+                            <p>堂區使用規範與守則</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="contact-info">
             <h2>聯絡資訊</h2>
             <div class="contact-grid">
@@ -244,7 +396,7 @@
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
                     <h3>電話</h3>
-                    <p>TEL: 331-0412</p>
+                    <p>TEL: (06) 331-0412</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
@@ -255,9 +407,11 @@
         </section>
     </main>
 
+    
+
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 XXX教堂. All rights reserved.</p>
+            <p>&copy; 2024 聖母進教之佑天主堂. All rights reserved.</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
