--- a/donation.html
+++ b/donation.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="images/title.jpg" alt="教堂標誌">
+                <img src="images/Title.jpg" alt="教堂標誌">
             </div>
             <nav>
                 <ul>
@@ -42,15 +42,14 @@
                 <h2>募款進度</h2>
                 <div class="progress-stats">
                     <div class="stat-item">
-                        <div class="amount">500</div>
+                        <div class="amount">1,880</div>
                         <div class="label">目前募得</div>
                         <div class="unit">萬元</div>
                     </div>
                     <div class="progress-bar-container">
-                        <div class="progress-marker">30%</div>
                         <div class="progress-bar">
                             <div class="progress-fill"></div>
-                            <div class="progress-percentage">30%</div>
+                            <div class="progress-percentage">37.2%</div>
                         </div>
                         <div class="wave-container">
                             <div class="wave wave1"></div>
@@ -59,7 +58,7 @@
                         </div>
                     </div>
                     <div class="stat-item target">
-                        <div class="amount">1,500</div>
+                        <div class="amount">7,000</div>
                         <div class="label">目標金額</div>
                         <div class="unit">萬元</div>
                     </div>
@@ -67,8 +66,7 @@
                 <div class="progress-info">
                     <p class="progress-text">感謝您的支持！我們正在努力達成翻修目標。</p>
                     <div class="progress-amount">
-                        <p>已募得：<span class="current-amount">5,000,000</span> 元</p>
-                        <p>目標：<span>15,000,000</span> 元</p>
+                        <p>尚缺：<span>51,000,000</span></p>
                     </div>
                 </div>
             </div>
